<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:orientation="horizontal"
    android:padding="@dimen/activity_padding"
    android:layout_gravity="center_vertical">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_height="fill_parent"
        android:layout_width="0dp"
        android:orientation="vertical"
        android:padding="@dimen/activity_padding"
        android:layout_gravity="center_vertical"
        android:layout_weight="3">

        <EditText
            android:id="@+id/auth_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/auth_email"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/auth_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/auth_pass"
            android:layout_marginTop="@dimen/input_top_margin"
            android:password="true" />

        <EditText
            android:id="@+id/auth_confirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/auth_confirm"
            android:layout_marginTop="@dimen/input_top_margin"
            android:password="true"
            android:visibility="gone" />

    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_height="fill_parent"
        android:layout_width="0dp"
        android:orientation="vertical"
        android:paddingRight="@dimen/activity_padding"
        android:paddingTop="@dimen/activity_padding"
        android:layout_gravity="center_vertical"
        android:layout_weight="1">

        <Button
            android:id="@+id/auth_login_btn"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/auth_login_btn"
            android:layout_gravity="center_horizontal" />

    </LinearLayout>
</LinearLayout>